--- a/R5ProTestbed/Base.lproj/Main.storyboard
+++ b/R5ProTestbed/Base.lproj/Main.storyboard
@@ -1,26 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="H1p-Uh-vWS">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14460.31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="H1p-Uh-vWS">
     <device id="ipad10_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14460.20"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
-    <customFonts key="customFonts">
-        <array key="HelveticaNeue.ttc">
-            <string>HelveticaNeue</string>
-        </array>
-    </customFonts>
     <scenes>
         <!--Master-->
         <scene sceneID="pY4-Hu-kfo">
             <objects>
                 <navigationController title="Master" id="RMx-3f-FxP" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="Pmd-2v-anx">
-                        <rect key="frame" x="0.0" y="20" width="320" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
@@ -85,6 +79,20 @@
                                 <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="kaf-AN-MNz">
+                                <rect key="frame" x="136" y="321" width="223" height="30"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits"/>
+                                <connections>
+                                    <action selector="onStream3NameChange:" destination="JEX-9P-axG" eventType="editingDidEnd" id="veb-MR-Qmy"/>
+                                </connections>
+                            </textField>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Stream3 Name:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2SR-J2-eNk">
+                                <rect key="frame" x="9" y="329" width="119" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                             <button opaque="NO" contentMode="scaleToFill" verticalCompressionResistancePriority="749" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="heN-c8-Xpv">
                                 <rect key="frame" x="136" y="248" width="174" height="30"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -96,7 +104,7 @@
                                 </connections>
                             </button>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="7JS-SA-FUB">
-                                <rect key="frame" x="0.0" y="334" width="834" height="778"/>
+                                <rect key="frame" x="0.0" y="370" width="834" height="742"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Select Test From Menu on Left" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="mBj-tg-gTI">
                                         <rect key="frame" x="0.0" y="0.0" width="834" height="21"/>
@@ -176,6 +184,7 @@
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
+                            <constraint firstItem="kaf-AN-MNz" firstAttribute="leading" secondItem="2SR-J2-eNk" secondAttribute="trailing" constant="8" id="1CO-nU-uLT"/>
                             <constraint firstItem="WJi-W0-Jyd" firstAttribute="leading" secondItem="nOg-Ym-DZU" secondAttribute="trailing" constant="8" id="2OC-Bt-AEm"/>
                             <constraint firstItem="WJi-W0-Jyd" firstAttribute="trailing" secondItem="svH-Pt-448" secondAttribute="trailingMargin" id="2UO-a0-sZc"/>
                             <constraint firstItem="O1F-8a-zHi" firstAttribute="trailing" secondItem="svH-Pt-448" secondAttribute="trailingMargin" id="45E-68-VX3"/>
@@ -185,6 +194,7 @@
                             <constraint firstItem="7JS-SA-FUB" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leading" id="Dns-Qn-1Mk"/>
                             <constraint firstItem="heN-c8-Xpv" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leadingMargin" constant="120" id="F4y-dC-wv3"/>
                             <constraint firstItem="4x1-EM-g9v" firstAttribute="top" secondItem="O1F-8a-zHi" secondAttribute="bottom" constant="11" id="GNe-mi-FUb"/>
+                            <constraint firstItem="kaf-AN-MNz" firstAttribute="top" secondItem="WJi-W0-Jyd" secondAttribute="bottom" constant="5" id="Ho1-H2-jeK"/>
                             <constraint firstItem="Bol-r7-BC2" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leadingMargin" constant="73" id="Jr5-Ju-aPV"/>
                             <constraint firstItem="7JS-SA-FUB" firstAttribute="bottom" secondItem="GAO-Cl-Wes" secondAttribute="top" id="KAe-wz-7nf"/>
                             <constraint firstItem="Hp7-fb-5HO" firstAttribute="top" secondItem="svH-Pt-448" secondAttribute="top" constant="120" id="L7l-l7-Zxv"/>
@@ -192,6 +202,7 @@
                             <constraint firstItem="WJi-W0-Jyd" firstAttribute="top" secondItem="heN-c8-Xpv" secondAttribute="bottom" constant="5" id="MwG-Nr-zYF"/>
                             <constraint firstItem="Hp7-fb-5HO" firstAttribute="top" secondItem="mSH-kd-klc" secondAttribute="bottom" constant="6" id="Tyf-bk-7Yn"/>
                             <constraint firstItem="nOg-Ym-DZU" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leading" constant="9" id="VQ0-gZ-hTA"/>
+                            <constraint firstItem="2SR-J2-eNk" firstAttribute="top" secondItem="nOg-Ym-DZU" secondAttribute="bottom" constant="22" id="aW4-NO-p1f"/>
                             <constraint firstItem="Bol-r7-BC2" firstAttribute="top" secondItem="mSH-kd-klc" secondAttribute="bottom" constant="61" id="bWw-cV-WOc"/>
                             <constraint firstItem="7JS-SA-FUB" firstAttribute="centerX" secondItem="mSH-kd-klc" secondAttribute="centerX" id="dlz-fJ-R9w"/>
                             <constraint firstItem="O1F-8a-zHi" firstAttribute="leading" secondItem="Bol-r7-BC2" secondAttribute="trailing" constant="8" id="hSj-40-IiP"/>
@@ -199,7 +210,8 @@
                             <constraint firstItem="4x1-EM-g9v" firstAttribute="leading" secondItem="JuC-eB-Abt" secondAttribute="trailing" constant="8" id="j0g-ta-yQ1"/>
                             <constraint firstItem="7JS-SA-FUB" firstAttribute="centerX" secondItem="Hp7-fb-5HO" secondAttribute="centerX" id="neD-jw-Odj"/>
                             <constraint firstAttribute="trailing" secondItem="7JS-SA-FUB" secondAttribute="trailing" id="o9o-Bd-tZM"/>
-                            <constraint firstItem="7JS-SA-FUB" firstAttribute="top" secondItem="svH-Pt-448" secondAttribute="top" constant="334" id="ubI-ip-A6U"/>
+                            <constraint firstItem="7JS-SA-FUB" firstAttribute="top" secondItem="svH-Pt-448" secondAttribute="top" constant="370" id="ubI-ip-A6U"/>
+                            <constraint firstItem="2SR-J2-eNk" firstAttribute="leading" secondItem="svH-Pt-448" secondAttribute="leading" constant="9" id="xGK-QJ-y2r"/>
                             <constraint firstItem="JuC-eB-Abt" firstAttribute="top" secondItem="Bol-r7-BC2" secondAttribute="bottom" constant="22" id="xhv-oX-gai"/>
                         </constraints>
                     </view>
@@ -213,6 +225,7 @@
                         <outlet property="licenseText" destination="mSH-kd-klc" id="P94-5I-D21"/>
                         <outlet property="stream1Text" destination="4x1-EM-g9v" id="JMw-6z-eAb"/>
                         <outlet property="stream2Text" destination="WJi-W0-Jyd" id="wFS-Qm-5yj"/>
+                        <outlet property="stream3Text" destination="kaf-AN-MNz" id="wSd-PE-tVb"/>
                         <outlet property="videoSwitch" destination="b8i-NF-MxH" id="cWW-bn-cYt"/>
                     </connections>
                 </viewController>
@@ -282,7 +295,7 @@
             <objects>
                 <navigationController id="vC3-pB-5Vb" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" id="DjV-YW-jjY">
-                        <rect key="frame" x="0.0" y="20" width="834" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="834" height="50"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
